# License_Key_Generator

./: .gitignore  ABOUT.md  CLAUDE.md  HELP.md  ICON_CHANGES.md  NEXT_SESSION.md  PROJECT_MEMORY.md  README.md  USER_GUIDE.md  build_config.toml  helpers.py  keycrypto.py  keystore.py  main.py  pyproject.toml  registry_tab.py  ui_theme.py
assets/: icon.icns
docs/: PROJECT_MEMORY.md  USER_GUIDE.md
tabs/: __init__.py  apps_tab.py  mint_tab.py  registry_tab.py  verify_tab.py
